- add program compilation - add mail sender - add default sort - add preferances - add drag and drop